# yew-ssr-wrangler-demo

./: .gitignore  Cargo.toml  README.md  Trunk.toml  package.json  wrangle  wrangler.toml
client_package/: Cargo.toml  index.html
client_package/src/: main.rs
src/: lib.rs
yew_app/: Cargo.toml
yew_app/src/: lib.rs
