[workspace]
members = [
    ".",
    "yew_app",
    "client_package",
]

[package]
name = "yew-ssr-wrangler-demo"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.0", default-features = false, features = ["io-util", "macros"] }
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = "0.4"
worker = "0.0.18"

yew = { version = "0.20.0", features = ["ssr"] }
yew_app = { path = "yew_app" }
tokio-stream = "0.1.14"
